@@ -1777,6 +1777,178 @@ call_sub(...)
         case SPVM_TYPE_C_RUNTIME_TYPE_VALUE_ARRAY:
         case SPVM_TYPE_C_RUNTIME_TYPE_OBJECT_ARRAY:
         {
+          // Convert string to SPVM::Data::Array
+          if (SvOK(sv_value)) {
+            if (SvROK(sv_value) && sv_derived_from(sv_value, "ARRAY")) {
+              
+              SV* sv_elems = sv_value;
+              
+              AV* av_elems = (AV*)SvRV(sv_elems);
+              
+              int32_t length = av_len(av_elems) + 1;
+              
+              // Convert string array to SPVM::Data::Array
+              if (arg->basic_type_id == SPVM_BASIC_TYPE_C_ID_BYTE && arg->type_dimension == 2) {
+                
+              }
+              else if (arg->basic_type_id == SPVM_BASIC_TYPE_C_ID_BYTE && arg->type_dimension == 1) {
+                switch (arg->basic_type_id) {
+                  case SPVM_BASIC_TYPE_C_ID_BYTE: {
+                    // New array
+                    void* array = env->new_barray_raw(env, length);
+
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+
+                    int8_t* elems = env->belems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (int8_t)SvIV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_barray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    sv_value = sv_barray;
+                    break;
+                  }
+                  case SPVM_BASIC_TYPE_C_ID_SHORT: {
+                    // New array
+                    void* array = env->new_sarray_raw(env, length);
+
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+
+                    int16_t* elems = env->selems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (int16_t)SvIV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_sarray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    sv_value = sv_sarray;
+                    break;
+                  }
+                  case SPVM_BASIC_TYPE_C_ID_INT: {
+                    
+                    // New array
+                    void* array = env->new_iarray_raw(env, length);
+                    
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+                    
+                    int32_t* elems = env->ielems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (int32_t)SvIV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_iarray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    
+                    sv_value = sv_iarray;
+                    break;
+                  }
+                  case SPVM_BASIC_TYPE_C_ID_LONG: {
+                    // New array
+                    void* array = env->new_larray_raw(env, length);
+
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+
+                    int64_t* elems = env->lelems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (int64_t)SvIV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_larray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    sv_value = sv_larray;
+                    break;
+                  }
+                  case SPVM_BASIC_TYPE_C_ID_FLOAT: {
+                    // New array
+                    void* array = env->new_farray_raw(env, length);
+
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+
+                    float* elems = env->felems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (float)SvNV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_farray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    sv_value = sv_farray;
+                    break;
+                  }
+                  case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
+                    // New array
+                    void* array = env->new_darray_raw(env, length);
+
+                    // Increment reference count
+                    env->inc_ref_count(env, array);
+
+                    double* elems = env->delems(env, array);
+                    {
+                      int32_t i;
+                      for (i = 0; i < length; i++) {
+                        SV** sv_value_ptr = av_fetch(av_elems, i, 0);
+                        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
+                        elems[i] = (double)SvNV(sv_value);
+                      }
+                    }
+                    
+                    // New sv array
+                    SV* sv_darray = SPVM_XS_UTIL_new_sv_object(env, array, "SPVM::Data::Array");
+                    sv_value = sv_darray;
+                    break;
+                  }
+                  default:
+                    assert(0);
+                }
+              }
+            }
+            else if (!SvROK(sv_value)) {
+              // Copy
+              sv_value = sv_2mortal(newSVsv(sv_value));
+              
+              // Encode to UTF-8
+              sv_utf8_encode(sv_value);
+              
+              int32_t length = sv_len(sv_value);
+              const char* chars = SvPV_nolen(sv_value);
+              
+              void* string = env->new_str_len_raw(env, chars, length);
+              env->inc_ref_count(env, string);
+              
+              sv_value = SPVM_XS_UTIL_new_sv_object(env, string, "SPVM::Data::Array");
+            }
+          }
+          
           if (!SvOK(sv_value)) {
             stack[arg_var_id].oval = NULL;
           }
